# MC60_CMake_Template

./: CMakeLists.txt
config/: custom_sys_cfg.c  sys_config.c
config/inc/: custom_feature_def.h  custom_gpio_cfg.h  custom_task_cfg.h
include/: ql_ssl.h  ql_type.h
libs/gcc/MC60E/: linkscript.ld
ril/inc/: lib_ril_sms.h  ril_ble.h
ril/src/: ril_atResponse.c  ril_audio.c  ril_ble_clinet.c  ril_ftp.c  ril_location2.c  ril_mqtt.c  ril_network.c  ril_system.c  ril_urc.c
src/: main.c
tools/: makeGFH.py
